<resources>
    <string name="app_name">TaskUp</string>
    <string name="my_todo_list">My Todo List</string>
    <string name="add_new_todo">Add new Todo</string>
    <string name="alertTitle">"Enter Your Todo: "</string>
    <string name="alertTitle2">"Enter Description: "</string>
    <string name="alertTitle3">"Enter Deadline: "</string>
    <string name="alertTitle4">"Enter Priority: "</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="todo_name">Todo Name</string>
    <string name="enter_new_todo">Enter new Todo</string>
    <string name="todo_description">Todo Description</string>
    <string name="enter_description">Enter description</string>
    <string name="todo_priority">Todo Priority</string>
    <string name="enter_priority">Enter priority</string>
    <string name="todo_date">Todo Date</string>
    <string name="enter_deadline_yyyy_mm_dd">Enter deadline</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="_2024_05_12">2024-05-12</string>
    <string name="heading">Heading</string>
</resources>