<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todo_row_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/todo_row_item2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="#DFB4E6"
        android:backgroundTint="#EAC2F1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#E3D3D3"
                android:backgroundTint="#F1C7F8"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/todoCheckBox"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="#9B16B1"
                    android:backgroundTint="#9B16B1"
                    android:buttonTint="@color/white"
                    android:text="@string/task"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/priorityNumberDecimal"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#9B16B1"
                    android:ems="10"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="5" />

            </LinearLayout>
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/deadlineTextTime"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:text="@string/_2024_05_12"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/deadlineTextTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="Due Date:   "
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deadlineTextTime"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="5"
                app:srcCompat="@drawable/baseline_edit_24" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="5"
                app:srcCompat="@drawable/baseline_delete_24" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>